syntax = "proto3";

package auth_service;

service AuthService {
  rpc RefreshTokens (RefreshTokensRequest) returns (RefreshTokensResponse) {}
}

message RefreshTokensRequest {
  string sessionId = 1;
  string accountId = 2;
  string refreshToken = 3;
}

message RefreshTokensResponse {
  string accessToken = 1;
  string refreshToken = 2;
}
